name:                typedrat-site
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/typedrat/typedrat-site#readme
license:             GPL-3
license-file:        LICENSE
author:              Alexis Williams
maintainer:          pro@typedr.at
copyright:           2017 Alexis Williams
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable typedrat-site
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Typedrat.Templates.Layout
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , lucid
                     , wai
                     , wai-middleware-static
                     , Spock
                     , Spock-lucid
  default-extensions:  OverloadedStrings
                     , ExtendedDefaultRules
                     , FlexibleContexts
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/typedrat/typedrat-site
