name:                typedrat-site
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/typedrat/typedrat-site#readme
license:             GPL-3
license-file:        LICENSE
author:              Alexis Williams
maintainer:          pro@typedr.at
copyright:           2017 Alexis Williams
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable typedrat-site
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Typedrat.App
                     , Typedrat.Templates.Layout
                     , Typedrat.Templates.PostList
                     , Typedrat.DB.Post
                     , Typedrat.DB.Utils
                     , Typedrat.Routes
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , time
                     , dotenv
                     , wai
                     , wai-middleware-static
                     , hvect
                     , reroute
                     , Spock
                     , Spock-lucid
                     , lucid
                     , slug
                     , pandoc
                     , profunctors
                     , product-profunctors
                     , postgresql-simple
                     , opaleye
  default-extensions:  OverloadedStrings
                     , ExtendedDefaultRules
                     , FlexibleContexts
                     , FlexibleInstances
                     , MultiParamTypeClasses
                     , TypeFamilies
                     , FunctionalDependencies
                     , UndecidableInstances
                     , StandaloneDeriving
                     , DataKinds
                     , Arrows
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/typedrat/typedrat-site
