name:                typedrat-site
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/typedrat/typedrat-site#readme
license:             GPL-3
license-file:        LICENSE
author:              Alexis Williams
maintainer:          pro@typedr.at
copyright:           2017 Alexis Williams
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable typedrat-site
  hs-source-dirs:      app
  main-is:             Main.hs
  other-modules:       Typedrat.App
                     , Typedrat.Auth
                     , Typedrat.DB
                     , Typedrat.DB.Comment
                     , Typedrat.DB.Post
                     , Typedrat.DB.Slug
                     , Typedrat.DB.Types
                     , Typedrat.DB.User
                     , Typedrat.DB.Utils
                     , Typedrat.Markup
                     , Typedrat.Routes
                     , Typedrat.Templates
                     , Typedrat.Templates.Layout
                     , Typedrat.Templates.Post
                     , Typedrat.Templates.PostEditor
                     , Typedrat.Templates.PostList
                     , Typedrat.Templates.Types
                     , Typedrat.Types
                     , Typedrat.Views
                     , Web.SpriteIcons
                     , Web.SpriteIcons.TH
  ghc-options:         -threaded -dynamic -rtsopts -with-rtsopts=-N -Wunused-imports
  build-depends:       base
                     , text
                     , bytestring
                     , time
                     , dotenv
                     , wai
                     , wai-middleware-static
                     , hvect
                     , reroute
                     , Spock
                     , Spock-core
                     , Spock-lucid
                     , lucid
                     , slug
                     , pandoc
                     , profunctors
                     , product-profunctors
                     , postgresql-simple
                     , opaleye
                     , containers
                     , aeson
                     , template-haskell
                     , lens
                     , lens-aeson
                     , http-types
                     , wreq
                     , mtl
  default-extensions:  OverloadedStrings
                     , ExtendedDefaultRules
                     , FlexibleContexts
                     , FlexibleInstances
                     , MultiParamTypeClasses
                     , TypeFamilies
                     , FunctionalDependencies
                     , UndecidableInstances
                     , StandaloneDeriving
                     , DataKinds
                     , Arrows
                     , RecordWildCards
                     , DeriveFunctor
                     , TypeSynonymInstances
                     , TemplateHaskell
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/typedrat/typedrat-site
